2007-07-23  Johan Gonqvist <johan.gronqvist@gmail.com>
	* src/plugins/Calendar.py: first day of calendar is an option.

2007-10-05 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DisplayTabs/_GalleryTab.py: remove bug that leads to database corruption,
	if media is deleted in mediaview, remove media in all open gallery tabs

2007-10-05 James G. Sack <jgsack@san.rr.com>
	* src/GrampsDb/_GrampsDbBase.py:
	* src/GrampsDb/_GrampsGEDDB.py:
	* src/GrampsDb/_GrampsXMLDB.py:
	* src/GrampsDb/_GrampsInMemDB.py:
	* src/Bookmarks.py:
	issue #1261: creating bookmark does not lead to save of xml

2007-10-03  Brian Matherly <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0001238: Web report: sort references for 
	places and media (use remove case sensitive sort and use normalized strings 
	for each section)

2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_GrampsDbBase.py: copy bookmark list, don't reference
	* src/GrampsDbUtils/_ReadXML.py: only add bookmarks if not present already, #1187

2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Spell.py: add gtkspell bug workaround, see eg issue 1272, 1091, ...

2007-10-03  Don Allingham  <don@gramps-project.org>
	* various: create gen package, move proxy files to this library

2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DataViews/_PedigreeView.py: correctly load bookmarks, issue 1271
	* src/DataViews/_RelationView.py: correctly load bookmarks, issue 1271
	* src/PageView.py: correct bug not going to bookmark if no active person
	* src/DataViews/_MediaView.py:
	* src/DataViews/_NoteView.py:
	* src/DataViews/_RepositoryView.py:
	* src/DataViews/_SourceView.py:
	* src/DataViews/_EventView.py:
	* src/DataViews/_FamilyList.py:
	* src/DataViews/_PedigreeView.py:
	* src/DataViews/_PlaceView.py:
	* src/DataViews/_PersonView.py:
	* src/DataViews/_RelationView.py:
	after import, redraw bookmark menu
